fixed firefox issue of Shifty Spritz showing when printing.

--- a/chrome/source/css/style.styl
+++ b/chrome/source/css/style.styl
@@ -152,6 +152,7 @@
     #left-shifty, #right-shifty, #center-shifty
       height 100%
       color #333
+      transition none
       min-height 1px
       z-index 1
       float left
